- BUG: Diffing files without a file extension but with the
       path/URL having a dot in it could lead to a crash. (Stefan)
- BUG: The language packs weren't used, even if checked in
       the settings dialog. (Stefan)
- BUG: On NT4, the auth data wasn't saved correctly. (Stefan)

Version 1.1.0 RC1
- ADD: New button in the commit dialog which will 
       fill the log message box with the status
       and filename of all selected files. (Stefan)
- ADD: Option to exclude/include specific paths from showing
       icon overlays. (Stefan)
- ADD: On Win2k and later, the authentication data is now
       encrypted before saved. The encryption is not available
       for the other OS's. (Stefan)
- ADD: When creating branches/tags, you now can choose if
       you want to use the working copy as the source or
       just to a repo->repo copy. (Stefan)
- ADD: If the "check for updates" can't connect to the
       repository, just show the local status. (Stefan)
- ADD: The "Add to ignore list" now has a submenu with
       the filename and the filemask (e.g. "*.tmp")
       as its entries. (Stefan)
- ADD: Show hints about some error messages, e.g. for
       the "out-of-date" error tell the user to 
       update first. (Stefan)
- CHG: Updated TortoisePlink to version 0.55. (Stefan)
- CHG: The Repository Browser now sorts the date column
       by the real date, not the text. (Stefan)
- CHG: The foldername for which an update is done for is
       shown in the progress dialog title. (Stefan)
- CHG: Temporary files created for diffing retain their 
       original file extensions so that external tools
       can determine the file type for the diff. (Stefan)
- BUG: When an URL to a file was entered in the repository
       browser, it was treated as a folder. (Stefan)
- BUG: Right-drag export of more than one folder made the
       additional folders exported inside the previous
       ones. (Stefan)
- BUG: Authentication when viewing remote properties lead